# compileNote

./: README.md
HarmonyOS/: FFmpeg.txt  Openssl.txt  compileFmmpeg.txt  opencv.txt
QMeet/: CMakeLists.txt
QMeet/doc/: CHANGELOG_DRAWING_FEATURE.md  DRAWING_DEVELOPER_GUIDE.md  DRAWING_FEATURE_GUIDE.md  DRAWING_FEATURE_INDEX.md  DRAWING_FEATURE_QUICKSTART.md  DRAWING_FEATURE_README.md  DRAWING_QUICK_REFERENCE.md  DRAWING_WINDOW_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.txt  MOUSE_PASSTHROUGH_IMPLEMENTATION.md  MOUSE_PASSTHROUGH_SUMMARY.md  README.md  SCREEN_DRAWING_USAGE_GUIDE.md  STYLESHEET_COMPLETION_REPORT.md  STYLESHEET_GUIDE.md  STYLESHEET_QUICK_REFERENCE.md  STYLE_MIGRATION_SUMMARY.md
QMeet/resources/: resources.qrc
QMeet/resources/styles/: main.qss
QMeet/src/: main.cpp
QMeet/src/app/: Application.cpp  Application.h  Settings.cpp  Settings.h
QMeet/src/core/: ChatManager.cpp  ChatManager.h  MediaManager.cpp  MediaManager.h  MeetingManager.cpp  MeetingManager.h  NetworkManager.cpp  NetworkManager.h  ScreenShareManager.cpp  ScreenShareManager.h
QMeet/src/models/: Meeting.cpp  Meeting.h  MeetingListModel.cpp  MeetingListModel.h  Message.cpp  Message.h  ParticipantListModel.cpp  ParticipantListModel.h  User.cpp  User.h
QMeet/src/ui/: LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MeetingRoomWindow.cpp  MeetingRoomWindow.h  MeetingRoomWindow.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui
QMeet/src/ui/delegates/: MeetingListDelegate.cpp  MeetingListDelegate.h  ParticipantListDelegate.cpp  ParticipantListDelegate.h
QMeet/src/ui/widgets/: ChatWidget.cpp  ChatWidget.h  ControlBar.cpp  ControlBar.h  ParticipantWidget.cpp  ParticipantWidget.h  ScreenShareWidget.cpp  ScreenShareWidget.h  TransparentDrawingWindow.cpp  TransparentDrawingWindow.h  TransparentDrawingWindow_macOS.mm  VideoWidget.cpp  VideoWidget.h
